--- a/shop/shop_index.html
+++ b/shop/shop_index.html
@@ -26,7 +26,7 @@
 
     <ul class="options-list">
         <li class="heart"><img src="../assets/heart.png" alt="Heart"></li>
-        <li class="user"><img src="../assets/user.png" alt="User"></li>
+        <li class="user" onclick="window.location.href='../card/card_index.html'""><img src="../assets/user.png" alt="User"></li>
         <li class="shopping"><img src="../assets/shopping-cart.png" alt="Shopping Cart"></li>
     </ul>    
 </header>
